update typewriter and split experimental element ids per feature flag